tests/invalid/list_index_wrong_type/main.py
def run_case() -> None:
    xs: list[int] = [1, 2]
    n: int = xs.index("bad")


if __name__ == "__main__":
    run_case()
